<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="be.ugent.ddm.jellefirstproject.MainActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:fontFamily="courier"
        android:textSize="40dp"
        android:text="@string/question" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
                android:id="@+id/txtResponse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/hint"/>

        <Button
                android:id="@+id/btnSubmit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submitTxt"
            />
        <Button
                android:id="@+id/btnHint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/hintBTN"
                android:onClick="getHint"
                android:layout_weight="1"
                />
    </LinearLayout>
</LinearLayout>
